fixed top cutoff issue with login.html

--- a/app/css/marketing.css
+++ b/app/css/marketing.css
@@ -290,7 +290,7 @@ td{
     margin-left: auto;
     margin-right: auto;
     position: absolute;
-    top: 50px; left: 0; bottom: 20px; right: 0;
+    top: 100px; left: 0; bottom: 20px; right: 0;
     border-weight: bold;
 }
 
